# Competitive-Programming

./: .gitignore  CMakeLists.txt  CuckooforHashing.cpp  Main.cpp.template  MakePalindrome.cpp  PossibleFriends.cpp  README.md
Facebook Hacker Cup/: BoomerangConstellations.cpp  ThePriceisCorrect.cpp
Google Code Jam/: InfiniteHouseofPancakes(Small).cpp  OminousOmino(Small).cpp  StandingOvation.cpp
acm.timus.ru/: AnansisCobweb.cpp  FibonacciSequence.cpp  NudnikPhotographer.cpp  Parity.cpp  TwoRounds.cpp
acm.zju.edu.cn/: BreakingStrings.cpp  Incompletechessboards.cpp  Mondriaan'sDream.cpp  TheCircumferenceoftheCircle.cpp
acmicpc.net/: Filter.cpp  KnockoutRacing.cpp
codechef.com/: BinaryLand.cpp  Bread.cpp  ChefandCube.cpp  Copy-Paste.cpp  Gravel.cpp  MasterChef.cpp  Na2aandluckystone.cpp
codeforces.com/: Taxies.cpp
coj.uci.cu/: 3403isDEAD.cpp  A+B=C.cpp  A+BProblem.java  A?B.cpp  ANDofTwo.cpp  APuzzlefrom"RedMatemática"I.cpp  APuzzlefrom"RedMatemática"II.cpp  ASimpleCalculation.cpp  AccountBalance.cpp  AddingHexNumbers.cpp  AlarmClock.cpp  AlmostCompleteBinaryTree.cpp  AndersAndTheCards.cpp  AnotherCandies.cpp  ArrangingAmplifiers.cpp  AttackingRooks.cpp  Average.cpp  Awari20.cpp  BalancedWordsII.cpp  BettyandtheModularExponentiation.cpp  BigIntegerProblem?.cpp  Bijele.cpp  BinaryGenocide.cpp  Bingo!.cpp  BlotsonPaper.cpp  BrainsinAction.cpp  BridgeOverRiver.cpp  COW.cpp  Coder.cpp  CoinChange.cpp  CollectingGold.cpp  CountingDiagonals.cpp  CountingIslands.cpp  CountingOnes.cpp  CountingTask.cpp  CowIDs.cpp  DecoratingthePastures.cpp  Diagonal.cpp  DifferentDigits.cpp  DistanceofManhattan.cpp  (+143 more)
hackerearth.com/: CountingInByteland.cpp  FightinNinjaWorld.cpp  Lexicographicallyminimalstring.cpp
hackerrank.com/: Botsavesprincess-2.cpp  Botsavesprincess.cpp  ImageSegmentation2.cpp  MorphologicalOperationsDilation.cpp  MorphologicalOperationsDilationwithanIrregularStructuringElement.cpp  MorphologicalOperationsErosion.cpp  QuerieswithFixedLength.cpp
icpcarchive.ecs.baylor.edu/: Admiral.cpp  Assignments.cpp  AutomatedCheckingMachine.cpp  Bricks(Geometry).cpp  Cakecut.cpp  Candy.cpp  ChaosManagement.cpp  ClockSplitter.cpp  CoinSwap.cpp  Comparinganswers.cpp  Countingsubsthreengs.cpp  DNASequences.cpp  DasinDaedalus.cpp  Diagrams&Tableaux.cpp  Disjointwatersupply.cpp  Electricity.cpp  EquilibriumState.cpp  EurekaTheorem.cpp  Evendistribution.cpp  Exploration.cpp  Exposingcorruption.cpp  Fakescoreboard.cpp  GoodVersusEvil.cpp  GoodorBad?.cpp  Grachten.cpp  HeavyCargo.cpp  HedgeMazes.cpp  Heightmap.cpp  Identifyingtea.cpp  IntervalProduct.cpp  Intrepidclimber.cpp  IslandsintheDataStream.cpp  Jollo.cpp  Journeythroughthekingdom.cpp  Jumpingmonkey.cpp  KnightsoftheRoundTable.cpp  LineThemUp.cpp  LogJumping.cpp  Mealy'sMemoirs.cpp  Non-DecreasingDigits.cpp  (+21 more)
lightoj.com/: AChildhoodGame.cpp  ADangerousMaze.cpp  AgentJ.cpp  AladdinandtheReturnJourney.cpp  AllPossibleIncreasingSubsequences.cpp  AngryProgrammer.cpp  ArraySimulation.cpp  BakerVai.cpp  BestPicnicEver.cpp  BinaryMatrix.cpp  BinarySimulation.cpp  Bishops.cpp  (+56 more)
(+904 files in other folders)
